고객센터 부분 수정, mypage 작성

--- a/community.html
+++ b/community.html
@@ -14,7 +14,7 @@
     <!-- 스타일시트 -->
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/help_faq.css">
+    <link rel="stylesheet" href="./css/community.css">
     <!-- 제이쿼리 -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <!-- bx slider -->
@@ -86,7 +86,6 @@
                                 <li><a href="#" target="_self">새 공연 소식</a></li>
                             </ul>
                         </div>
-
                     </li>
                     <li style="">
                         <a href="./help.html" style="display: block; margin-left: 15px;">
@@ -104,33 +103,33 @@
     <div class="container">
         <div class="contents">
             <div class="left_wrap">
-                <p>고객센터</p>
+                <p>커뮤니티</p>
                 <ul>
-                    <a href="./help.html">
+                    <a href="#">
                         <li class="left_wrap_btn">
-                            <span>공지사항</span>
+                            <span class="select_btn">자유게시판</span>
                         </li>
                     </a>
                     <a href="./help_faq.html">
                         <li class="left_wrap_btn">
-                            <span class="select_btn">자주 찾는 질문</span>
-                        </li>
-                    </a>
-                    <a href="./help_new_qna.html">
-                        <li class="left_wrap_btn">
-                            <span>1:1 문의</span>
+                            <span>극단원 모집</span>
                         </li>
                     </a>
                     <a href="./help_qna.html">
                         <li class="left_wrap_btn">
-                            <span>1:1 문의내역</span>
+                            <span>오디션 정보</span>
+                        </li>
+                    </a>
+                    <a href="./help_qna.html">
+                        <li class="left_wrap_btn">
+                            <span>새 공연 소식</span>
                         </li>
                     </a>
                 </ul>
             </div>
             <div class="right_wrap">
                 <p class="right_title">
-                    자주 찾는 질문
+                    자유게시판
                 </p>
                 <div class="right_list">
                     <ul class="list_header">
@@ -140,6 +139,12 @@
                         <li>
                             제목
                         </li>
+                        <li>
+                            작성자
+                        </li>
+                        <li>
+                            작성일
+                        </li>
                     </ul>
                     <ul class="list_contents">
                         <table width="100%">
@@ -148,9 +153,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -158,9 +171,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -168,9 +189,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -178,9 +207,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -188,9 +225,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -198,9 +243,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -208,9 +261,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                첫번째</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -218,9 +279,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                연락할 수 있는 방법이 뭐가 있나요?</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -228,9 +297,17 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                어떻게 사용하는건가요?</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
@@ -238,13 +315,20 @@
                                     <td valign="top" align="center">
                                         <a href="">
                                             <li>
-                                                1</li>
+                                                1
+                                            </li>
                                             <li>
-                                                티캐쳐는 어떤 홈페이지 인가요?</li>
+                                                첫번째
+                                            </li>
+                                            <li>
+                                                작성자1
+                                            </li>
+                                            <li>
+                                                2023-01-01
+                                            </li>
                                         </a>
                                     </td>
                                 </tr>
-
                             </tbody>
                         </table>
                     </ul>
@@ -292,7 +376,7 @@
         </div>
     </div>
     <footer>
-        <a href=" /">
+        <a href="/">
             <img class="logo" src="./img/logo.png" alt="로고" style="width:150px;">
         </a>
         <div class="all_company">
