--- a/index.html
+++ b/index.html
@@ -51,22 +51,15 @@
             </div>
         </div>
 
-        <div class="bg">
-        </div>
-
         <div class="gnb">
             <div class="gnb_contents">
                 <ul class="gnb_menu">
                     <li>
-                        <a href="">공연</a>
-                        <ul class="depth2">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">예매율 순위</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">평점 순위</a>
-                            </li>
-                        </ul>
+                        <a href="">
+                            <span class="menu_span">공연</span>
+                        </a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="">예매</a>
                         <ul class="depth2" style="display: none; height: 200px;">
                             <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">지역별 예매</a>
@@ -74,33 +67,36 @@
                             <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">공연별 예매</a>
                             </li>
                         </ul>
+                    </li> -->
+                    <li>
+                        <a href="">
+                            <span class="menu_span">이벤트</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="">이벤트</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">진행중인
-                                    이벤트</a></li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">종료된
-                                    이벤트</a></li>
-                        </ul>
+                        <a href="" style="margin-left:5px;">
+                            <span class="menu_span">커뮤니티</span>
+                        </a>
+                        <div class="gnb_menu_sub_wrap">
+                            <ul class="gnb_menu_sub">
+                                <li><a href="#" target="_self">자유게시판</a></li>
+                                <li><a href="#" target="_self">극단원 모집</a></li>
+                                <li><a href="#" target="_self">오디션 정보</a></li>
+                                <li><a href="#" target="_self">새 공연 소식</a></li>
+                            </ul>
+                        </div>
+
                     </li>
-                    <li>
-                        <a href="">커뮤니티</a>
-                        <ul class="depth2" style="display: none; height: 200px;">
-                            <li style="margin-top: 20px;"><a href="" style="display: block; font-size: 14px;">자유게시판</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">극단원 모집</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">오디션 정보</a>
-                            </li>
-                            <li style="margin-top: 15px;"><a href="" style="display: block; font-size: 14px;">새 공연
-                                    소식</a></li>
-                        </ul>
-                    </li>
-                    <li style="float: left; width:110px; padding:20px 0;">
-                        <a href="" style="display: block; margin-left: 45px;">극장검색</a>
+                    <li style="">
+                        <a href="./help.html" style="display: block; margin-left: 15px;">
+                            <span class="menu_span">공지사항</span>
+                        </a>
                     </li>
                 </ul>
+                <div class="search_box"
+                    style="float: right; margin-top: -30px; border-color: 1px solid #fff!important;">
+                    <input type="text" style="padding: 0 10px; border-radius: 20px;">
+                </div>
             </div>
         </div>
     </div>
@@ -436,7 +432,7 @@
             </div>
         </div>
     </div>
-    <footer style="width: 980px; margin:0 auto; margin-top: 10px; font-size: 12px;">
+    <footer>
         <a href=" /">
             <img class="logo" src="./img/logo.png" alt="로고" style="width:150px;">
         </a>
