--- a/myPage_cancel.html
+++ b/myPage_cancel.html
@@ -130,7 +130,7 @@
                 <div class="right_list">
                     <div class="reserve_wrap">
                         <div class="buy_info_top">
-                            <span>무통장입금 대기중</span>
+                            <span>입금기한 초과</span>
                             <span style="float: right;">2023-02-01</span>
                         </div>
                         <div class="buy_info_detail">
@@ -154,56 +154,8 @@
                                 <div class="buy_info_txt_how">
                                     무통장입금
                                 </div>
-                                <div class="buy_info_txt_ct">
-                                    <p>&#183; 입금기한 : 2023-02-02 20:37:00 까지</p>
-                                    <p>&#183; 입금계좌 : [신한] 123-456-7891011</p>
-                                    <p>
-                                        &#183;
-                                        <span style="color: rgba(255, 0, 0, 0.8);">신청 후 24시간 내 미입금시 자동취소</span>
-                                        됩니다.
-                                        <br>
-                                        &#183; 은행 점검시간 중엔 가상계좌 입금이 되지 않습니다.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="reserve_wrap">
-                        <div class="buy_info_top">
-                            <span>결제완료</span>
-                            <span style="float: right;">2023-02-01</span>
-                        </div>
-                        <div class="buy_info_detail">
-                            <div class="buy_info_img">
-                                <a href="">
-                                    <img src="https://timeticket.co.kr/wys2/file_attach_thumb/2022/01/27/1643271898-98-0_wonbon_N_7_226x316_90_2.jpg"
-                                        alt="공연 썸네일">
-                                </a>
-                            </div>
-                            <div class="buy_info_txt">
-                                <div class="buy_info_txt_title">
-                                    <a href="">한 뼘 사이</a>
-                                </div>
-                                <div class="buy_info_txt_date">
-                                    2.02[목] 19:30 일반 (1매)
-                                    <br>
-                                </div>
-                                <div class="buy_info_txt_cnt">
-                                    총 1매 / 13,500원
-                                </div>
-                                <div class="buy_info_txt_how">
-                                    무통장입금
-                                </div>
-                                <div class="buy_info_txt_ct">
-                                    <p>&#183; 입금기한 : 2023-02-02 20:37:00 까지</p>
-                                    <p>&#183; 입금계좌 : [신한] 123-456-7891011</p>
-                                    <p>
-                                        &#183;
-                                        <span style="color: rgba(255, 0, 0, 0.8);">신청 후 24시간 내 미입금시 자동취소</span>
-                                        됩니다.
-                                        <br>
-                                        &#183; 은행 점검시간 중엔 가상계좌 입금이 되지 않습니다.
-                                    </p>
+                                <div class="buy_info_txt_can" style="color: rgba(255, 0, 0, 0.8);">
+                                    입금기한(신청 후 24시간)초과 - 자동 취소
                                 </div>
                             </div>
                         </div>
